cmake_minimum_required(VERSION 3.20)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(valid_tic_tac_toe_state leetcode/editor/en/valid_tic_tac_toe_state.cpp)
add_executable(bitwise_ors_of_subarrays leetcode/editor/en/bitwise_ors_of_subarrays.cpp)
add_executable(design_circular_queue leetcode/editor/en/design_circular_queue.cpp)
add_executable(rotate_list leetcode/editor/en/rotate_list.cpp)